banner list alignment fix

--- a/datacenterlight/static/datacenterlight/css/landing-page.css
+++ b/datacenterlight/static/datacenterlight/css/landing-page.css
@@ -1211,7 +1211,7 @@ footer {
   }
   .flex-row .desc-text,
   .flex-row .percent-text {
-    max-width: 430px;
+    max-width: 380px;
   }
   .flex-row-rev .desc-text {
     max-width: 710px;
